--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 GENERATE_SOURCEMAP=false
+REACT_APP_FIREBASE_API_KEY=AIzaSyCwAJ7WuqpMHe7-dQeRzgcA-XIuaurFJkE
+REACT_APP_FIREBASE_AUTH_DOMAIN=farmgest-176d3.firebaseapp.com
+REACT_APP_FIREBASE_PROJECT_ID=farmgest-176d3
+REACT_APP_FIREBASE_STORAGE_BUCKET=farmgest-176d3.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=441761572298
+REACT_APP_FIREBASE_APP_ID=1:441761572298:web:a4b49d864c121bd5819b33
+REACT_APP_FIREBASE_MEASUREMENT_ID=G-YSN9X2MMX1
